--- a/font/css/fontello-codes.css
+++ b/font/css/fontello-codes.css
@@ -1,17 +1,27 @@
 
-.icon-mail:before { content: '\e806'; } /* '' */
-.icon-cancel:before { content: '\e80f'; } /* '' */
-.icon-paper-plane:before { content: '\e804'; } /* '' */
-.icon-doc-text:before { content: '\e803'; } /* '' */
-.icon-github-circled:before { content: '\e80e'; } /* '' */
-.icon-twitter-circled:before { content: '\e808'; } /* '' */
-.icon-facebook-circled:before { content: '\e807'; } /* '' */
-.icon-gplus-circled:before { content: '\e809'; } /* '' */
-.icon-pinterest-circled:before { content: '\e80a'; } /* '' */
-.icon-linkedin-circled:before { content: '\e80b'; } /* '' */
-.icon-dribbble-circled:before { content: '\e80c'; } /* '' */
-.icon-stumbleupon-circled:before { content: '\e80d'; } /* '' */
-.icon-picture:before { content: '\e802'; } /* '' */
-.icon-trophy:before { content: '\e801'; } /* '' */
-.icon-user:before { content: '\e800'; } /* '' */
-.icon-download:before { content: '\e805'; } /* '' */
+.icon-home-outline:before { content: '\e800'; } /* '' */
+.icon-picture:before { content: '\e801'; } /* '' */
+.icon-cancel:before { content: '\e802'; } /* '' */
+.icon-trophy:before { content: '\e803'; } /* '' */
+.icon-download:before { content: '\e804'; } /* '' */
+.icon-user-1:before { content: '\e805'; } /* '' */
+.icon-github-circled-alt2:before { content: '\f056'; } /* '' */
+.icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-gplus-squared:before { content: '\f0d4'; } /* '' */
+.icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.icon-doc-text:before { content: '\f0f6'; } /* '' */
+.icon-youtube-play:before { content: '\f16a'; } /* '' */
+.icon-dribbble:before { content: '\f17d'; } /* '' */
+.icon-stumbleupon:before { content: '\f1a4'; } /* '' */
+.icon-paper-plane:before { content: '\f1d8'; } /* '' */
+.icon-facebook-official:before { content: '\f230'; } /* '' */
+.icon-github-circled-1:before { content: '\f301'; } /* '' */
+.icon-twitter-circled:before { content: '\f30a'; } /* '' */
+.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
+.icon-facebook-circled:before { content: '\f30d'; } /* '' */
+.icon-gplus:before { content: '\f30f'; } /* '' */
+.icon-gplus-circled:before { content: '\f310'; } /* '' */
+.icon-pinterest-circled:before { content: '\f313'; } /* '' */
+.icon-linkedin-circled:before { content: '\f319'; } /* '' */
+.icon-dribbble-circled:before { content: '\f31c'; } /* '' */
+.icon-stumbleupon-circled:before { content: '\f31f'; } /* '' */
