--- a/font/css/fontello.css
+++ b/font/css/fontello.css
@@ -1,10 +1,11 @@
 @font-face {
-  font-family: 'fontello';
-  src: url('../font/fontello.eot?87773380');
-  src: url('../font/fontello.eot?87773380#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?87773380') format('woff'),
-       url('../font/fontello.ttf?87773380') format('truetype'),
-       url('../font/fontello.svg?87773380#fontello') format('svg');
+  font-family: 'mail';
+  src: url('../font/mail.eot?33739473');
+  src: url('../font/mail.eot?33739473#iefix') format('embedded-opentype'),
+       url('../font/mail.woff2?33739473') format('woff2'),
+       url('../font/mail.woff?33739473') format('woff'),
+       url('../font/mail.ttf?33739473') format('truetype'),
+       url('../font/mail.svg?33739473#mail') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -13,14 +14,14 @@
 /*
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
-    font-family: 'fontello';
-    src: url('../font/fontello.svg?87773380#fontello') format('svg');
+    font-family: 'mail';
+    src: url('../font/mail.svg?33739473#mail') format('svg');
   }
 }
 */
  
  [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "fontello";
+  font-family: "mail";
   font-style: normal;
   font-weight: normal;
   speak: none;
@@ -35,7 +36,7 @@
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-     
+ 
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
  
@@ -46,23 +47,37 @@
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
  
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-mail:before { content: '\e806'; } /* '' */
-.icon-cancel:before { content: '\e80f'; } /* '' */
-.icon-paper-plane:before { content: '\e804'; } /* '' */
-.icon-doc-text:before { content: '\e803'; } /* '' */
-.icon-github-circled:before { content: '\e80e'; } /* '' */
-.icon-twitter-circled:before { content: '\e808'; } /* '' */
-.icon-facebook-circled:before { content: '\e807'; } /* '' */
-.icon-gplus-circled:before { content: '\e809'; } /* '' */
-.icon-pinterest-circled:before { content: '\e80a'; } /* '' */
-.icon-linkedin-circled:before { content: '\e80b'; } /* '' */
-.icon-dribbble-circled:before { content: '\e80c'; } /* '' */
-.icon-stumbleupon-circled:before { content: '\e80d'; } /* '' */
-.icon-picture:before { content: '\e802'; } /* '' */
-.icon-trophy:before { content: '\e801'; } /* '' */
-.icon-user:before { content: '\e800'; } /* '' */
-.icon-download:before { content: '\e805'; } /* '' */
+.icon-home-outline:before { content: '\e800'; } /* '' */
+.icon-picture:before { content: '\e801'; } /* '' */
+.icon-cancel:before { content: '\e802'; } /* '' */
+.icon-trophy:before { content: '\e803'; } /* '' */
+.icon-download:before { content: '\e804'; } /* '' */
+.icon-user-1:before { content: '\e805'; } /* '' */
+.icon-github-circled-alt2:before { content: '\f056'; } /* '' */
+.icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-gplus-squared:before { content: '\f0d4'; } /* '' */
+.icon-mail-alt:before { content: '\f0e0'; } /* '' */
+.icon-doc-text:before { content: '\f0f6'; } /* '' */
+.icon-youtube-play:before { content: '\f16a'; } /* '' */
+.icon-dribbble:before { content: '\f17d'; } /* '' */
+.icon-stumbleupon:before { content: '\f1a4'; } /* '' */
+.icon-paper-plane:before { content: '\f1d8'; } /* '' */
+.icon-facebook-official:before { content: '\f230'; } /* '' */
+.icon-github-circled-1:before { content: '\f301'; } /* '' */
+.icon-twitter-circled:before { content: '\f30a'; } /* '' */
+.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
+.icon-facebook-circled:before { content: '\f30d'; } /* '' */
+.icon-gplus:before { content: '\f30f'; } /* '' */
+.icon-gplus-circled:before { content: '\f310'; } /* '' */
+.icon-pinterest-circled:before { content: '\f313'; } /* '' */
+.icon-linkedin-circled:before { content: '\f319'; } /* '' */
+.icon-dribbble-circled:before { content: '\f31c'; } /* '' */
+.icon-stumbleupon-circled:before { content: '\f31f'; } /* '' */
