--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -165,7 +165,7 @@ h2,  h3 {
 }
 body {
 	margin: 0;
-	font-family: 'Droid Sans', sans-serif;
+	font-family: 'Times New Roman', Times, sans-serif;
 	font-size: 14px;
 	line-height: 20px;
 	color: #fff;
